--- a/content/metadata.yaml
+++ b/content/metadata.yaml
@@ -210,7 +210,7 @@ authors:
   -
     github: Cadair
     name: Stuart Mumford
-    initials: SN
+    initials: SM
     orcid: 0000-0003-4217-4642
     email: stuart@cadair.com
     affiliations:
