--- a/content/metadata.yaml
+++ b/content/metadata.yaml
@@ -113,7 +113,7 @@ authors:
     name: Miguel de Val-Borro
     initials: MVB
     orcid: 000-0002-0455-9384
-    email: mdeval@psi.edu  -
+    email: mdeval@psi.edu
     affiliations:
       - Planetary Science Institute
   -
