--- a/content/frontends.yaml
+++ b/content/frontends.yaml
@@ -111,7 +111,7 @@ frontends:
   - '@doi:10.1088/1742-6596/1031/1/012024'
   - '@doi:10.21105/joss.02513'
   - '@doi:10.21105/joss.01757'
-  comments: 'BoxLib is the predecessor to the AMReX adaptive mesh refinement library [@doi:10.21105/joss.01370] and supports all BoxLib and AMReX codes that use the native BoxLib binary output. AMReX implements patch-based AMR following Berger and Colella [@doi:10.1016/0021-9991(89)90035-1] with typical refinement jumps of 2 or 4 between levels (this factor can vary in the level hierarchy).
+  comments: 'BoxLib is the predecessor to the AMReX adaptive mesh refinement library [@doi:10.21105/joss.01370] and supports all BoxLib and AMReX codes that use the native BoxLib binary output. AMReX implements patch-based AMR following Berger and Colella [@doi:10.1016/0021-9991(89)90035-1] with typical refinement jumps of 2 or 4 between levels (this factor can vary in the level hierarchy).'
   index_type:
   - grid
   name: boxlib
