Try to use a citekey alias

--- a/content/metadata.yaml
+++ b/content/metadata.yaml
@@ -8,6 +8,7 @@ pandoc:
   manubot-fail-on-errors: True
   citekey-aliases:
     amrvac-paper: doi:10.1016/S0010-4655(03)00139-5
+    berger-collela-paper: doi:10.1016/0021-9991(89)90035-1
 lang: en-US
 authors:
   # NOTE: These are not in any specific order.
