--- a/.github/workflows/manubot.yaml
+++ b/.github/workflows/manubot.yaml
@@ -106,10 +106,9 @@ jobs:
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
-          python scripts/generate_yt_stats.py
           gh api graphql --paginate -f query="`cat scripts/pull_request_graphql.gql`" > pull_requests.json
           jq -s '[.[].data.repository.pullRequests.nodes[]]' < pull_requests.json > pr.json
-          python scripts/generate_pr_stats.py
+          python scripts/generate_stats.py
       - name: Build Manuscript
         run: bash build/build.sh
       - name: Upload Artifacts
