--- a/content/frontends.yaml
+++ b/content/frontends.yaml
@@ -308,6 +308,7 @@ frontends:
   - '@doi:10.1051/0004-6361/201936188'
   - '@doi:10.1093/mnras/stac2963'
   - '@doi:10.1093/mnras/stx2316'
+  - '@doi:10.1093/mnras/stac2963'
 - citations: []
   comments: null
   index_type:
